--- a/AutoMapperLite.csproj
+++ b/AutoMapperLite.csproj
@@ -4,20 +4,27 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+
+		<!-- NuGet Metadata -->
 		<PackageId>AutoMapperLite</PackageId>
-		<Version>2.0.1</Version>
-		<Authors>atkhssn</Authors>
+		<Version>2.0.3</Version>
+		<Authors>Atik Hassan</Authors>
 		<Company>AutoMapperLite</Company>
 		<Description>A lightweight object-to-object mapper alternative to AutoMapper.</Description>
-		<PackageTags>mapper reflection automapperlite</PackageTags>
+		<PackageTags>mapper reflection automapperlite lightweight automapper objectmapper di nested</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/atkhssn/AutoMapperLite</RepositoryUrl>
+		<Copyright>© 2025 Atik Hassan</Copyright>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>icon.png</PackageIcon>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<!-- Files to include in NuGet -->
 		<None Include="README.md" Pack="true" PackagePath="" />
 		<None Include="LICENSE" Pack="true" PackagePath="" />
+		<None Include="icon.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 	<ItemGroup>
